--- a/data cleaning and imputation.ipynb
+++ b/data cleaning and imputation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "58217911-f5ea-44cb-b823-b716778de482",
    "metadata": {},
    "outputs": [
@@ -60,14 +60,14 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "airfare = pd.read_csv(\"C:\\\\Users\\Madivoli Analytics\\\\OneDrive\\\\Documents\\\\Projects\\\\Airline Analysis\\\\airfare_report.csv\", low_memory=False)\n",
+    "airfare = pd.read_csv(\"C:\\\\Users\\Madivoli Analytics\\\\OneDrive\\\\Documents\\\\Projects\\\\Airline Analysis\\\\airfare_dataset.csv\", low_memory=False)\n",
     "\n",
     "print(airfare.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "ee2e92d0-92ef-4efc-8410-2971be6bf963",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "32c0767a-b76c-445b-b18c-9e858ea24021",
    "metadata": {},
    "outputs": [
@@ -144,15 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71acf91b-a9d6-4b70-8bec-70273ac4149f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "a4979d91-1115-4b37-870f-0d5a8e4dabbf",
    "metadata": {},
    "outputs": [
@@ -367,7 +359,7 @@
        "max      2725.600000  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "c1bf9243-c51e-43e4-8b23-4bab5bb2a0ef",
    "metadata": {},
    "outputs": [
@@ -651,7 +643,7 @@
        "[245955 rows x 13 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "81ebf2db-7ae5-4bb6-b48d-42acfdf21796",
    "metadata": {},
    "outputs": [
@@ -708,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "c5636f09-08e7-4319-8156-4098c70daefc",
    "metadata": {},
    "outputs": [
@@ -761,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "8fd74791-b515-44fb-80ff-8005c23c4fe9",
    "metadata": {},
    "outputs": [
@@ -793,6 +785,7 @@
     }
    ],
    "source": [
+    "# Addressing missing values in the numeric columns\n",
     "# Identify numeric columns \n",
     "\n",
     "numeric_columns = airfare.select_dtypes(include=['int64', 'float64']).columns\n",
@@ -820,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "dfe8059f-e74f-43a8-a89b-9a9f8c328a80",
    "metadata": {},
    "outputs": [
@@ -852,6 +845,7 @@
     }
    ],
    "source": [
+    "# Addressing missing vlaues in non-numeric columns\n",
     "# Columns to fill missing values for\n",
     "columns_to_replace = [\"carrier_lg\", \"carrier_low\"]\n",
     "\n",
@@ -872,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "e4332aa8-4a04-4283-9f50-507ed1722a14",
    "metadata": {},
    "outputs": [
@@ -880,13 +874,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved successfully! Shape: (245955, 23)\n"
+      "Data saved successfully! Shape: (245955, 19)\n"
      ]
     }
    ],
    "source": [
     "# Saving the cleaned DataFrame\n",
-    "airfare.to_csv(r\"C:\\Users\\Madivoli Analytics\\OneDrive\\Documents\\Projects\\Airline Analysis\\airfare_cleaned.csv\", \n",
+    "airfare.to_csv(r\"C:\\Users\\Madivoli Analytics\\OneDrive\\Documents\\Projects\\Airline Analysis\\airfare_cleaned_dataset.csv\", \n",
     "               index=False)\n",
     "\n",
     "\n",
@@ -895,11 +889,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "bd8db58f-9458-4d10-ae6b-9bfa3287d311",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Year  quarter  citymarketid_1  citymarketid_2  \\\n",
+      "0  2021        3           30135           33195   \n",
+      "1  2021        3           30135           33195   \n",
+      "2  2021        3           30140           30194   \n",
+      "3  2021        3           30140           30194   \n",
+      "4  2021        3           30140           30466   \n",
+      "\n",
+      "                            city1                          city2  airportid_1  \\\n",
+      "0  Allentown/Bethlehem/Easton, PA  Tampa, FL (Metropolitan Area)        10135   \n",
+      "1  Allentown/Bethlehem/Easton, PA  Tampa, FL (Metropolitan Area)        10135   \n",
+      "2                 Albuquerque, NM          Dallas/Fort Worth, TX        10140   \n",
+      "3                 Albuquerque, NM          Dallas/Fort Worth, TX        10140   \n",
+      "4                 Albuquerque, NM                    Phoenix, AZ        10140   \n",
+      "\n",
+      "   airportid_2 airport_1 airport_2  nsmiles  passengers    fare carrier_lg  \\\n",
+      "0        14112       ABE       PIE      970         180   81.43         G4   \n",
+      "1        15304       ABE       TPA      970          19  208.93         DL   \n",
+      "2        11259       ABQ       DAL      580         204  184.56         WN   \n",
+      "3        11298       ABQ       DFW      580         264  182.64         AA   \n",
+      "4        14107       ABQ       PHX      328         398  177.11         WN   \n",
+      "\n",
+      "   large_ms  fare_lg carrier_low   lf_ms  fare_low  \n",
+      "0    1.0000    81.43          G4  1.0000     81.43  \n",
+      "1    0.4659   219.98          UA  0.1193    154.11  \n",
+      "2    0.9968   184.44          WN  0.9968    184.44  \n",
+      "3    0.9774   183.09          AA  0.9774    183.09  \n",
+      "4    0.6061   184.49          AA  0.3939    165.77  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cleaned DataFrame\n",
+    "\n",
+    "print(airfare.head())"
+   ]
   },
   {
    "cell_type": "code",
